# salesaub-user

./: .env.example  pyproject.toml
.claude/: settings.local.json
app/: auth.py  main.py  settings.py
app/api/: deps.py
app/api/routes/: auth.py  users.py
app/handlers/: phone_otp.py  user.py
app/schemas/: phone_otp.py  user.py
app/services/: auth_service.py  user_service.py
